# netbox-changelog-diff-plugin

./: 404.html  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml
.github/workflows/: publish-pypi.yaml
changelog/: index.html
contributing/: index.html
netbox_changelog_diff_plugin/: __init__.py  filtersets.py  forms.py  models.py  tables.py  template_content.py  urls.py  utils.py  views.py
netbox_changelog_diff_plugin/templates/netbox_changelog_diff_plugin/: changelogdiff.html
netbox_changelog_diff_plugin/utilities/: html_differ.py
search/: search_index.json
tests/: __init__.py  test_netbox_changelog_diff_plugin.py
